--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PiDev
+application.vendor=21650
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/PiDev.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.itext-1.02b.jar=C:\\Users\\21650\\Downloads\\jar_files (1)\\itext-1.02b.jar
+file.reference.mail.jar=C:\\Users\\21650\\Downloads\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.itext-1.02b.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
