--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=pidev
+application.title=pidev_version_marche
 application.vendor=hedit
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -26,17 +26,25 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/pidev.jar
+dist.jar=${dist.dir}/pidev_version_marche.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.9.jar=..\\pidev emir java\\itextpdf-5.5.9.jar
+file.reference.javax.mail.jar=..\\javax\\javax.mail.jar
+file.reference.javax.persistence-api-2.2.jar=..\\javax.persistence-api-2.2.jar
+file.reference.zxing.jar=..\\zxing\\zxing.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.zxing.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.persistence-api-2.2.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +87,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=tn.esprit.gui.NewFXMain
+javafx.main.class=tn.esprit.tests.NewFXMain
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
