--- a/Pi/nbproject/project.properties
+++ b/Pi/nbproject/project.properties
@@ -27,10 +27,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/Pi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.core-3.5.1.jar=C:\\Users\\bouzi\\Downloads\\core-3.5.1.jar
+file.reference.itextpdf-5.5.9.jar=C:\\Users\\bouzi\\Desktop\\Nouveau dossier\\itextpdf-5.5.9.jar
+file.reference.javase-3.5.1.jar=C:\\Users\\bouzi\\Downloads\\javase-3.5.1.jar
+file.reference.qrgen-1.4.jar=C:\\Users\\bouzi\\Downloads\\qrgen-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.core-3.5.1.jar}:\
+    ${file.reference.javase-3.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
